# scrapers

./: README.md  pyproject.toml  tasks.robot  utility.py
keywords/: keywords.robot
page-objects/: page_locators.py
scratch/: scratch.py
