[tool.poetry]
name = "scrapers"
version = "0.1.0"
description = ""
authors = ["kevin <noreply@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
robotframework = "^6.1.1"
robotframework-seleniumlibrary = "^6.2.0"
webdriver-manager = "^4.0.1"
robotframework-selenium2library = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
